--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-numpy==1.22
-pandas==1.1
-torch==1.12
-scipy==1.9.1
+appdirs==1.4.4
+biopython==1.81
+blinker==1.4
+brotlipy==0.7.0
+fair-esm==2.0.0
+fonttools==4.25.0
+mkl-fft==1.3.1
+mkl-service==2.4.0
+munkres==1.1.4
+pandas==1.1.5
+patsy==0.5.3
+Pillow==9.4.0
+protobuf==3.20.3
+pyasn1-modules==0.2.8
+requests-oauthlib==1.3.0
+scipy==1.10.1
+torch==1.12.1
+torchsummary==1.5.1
 transformers==4.11.3
-pytorch-lightning==1.6.4
-huggingface_hub
-seaborn
-mpl-scatter-density
-astropy
-gitpython
-biotite==0.34
-requests
