neighbour + periodic finish train and sampling

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ bin/out*
 *.ipynb
 *.csv
 README.md
+*.ckpt
+*.npy
+bin/result_score_up_neighbour_8_11/*
+bin/resutl_periodic_neighbour_8_15
+bin/resutl_score_up_neighbour_8_11
+bin/sample_periodic_neighbour_8_15
